# Cultural-Lexis

./: .gitignore  LICENSE  README.md  mkdocs.sh  pyproject.toml  run_all_models.sh
analysis/: check_earth_mover_scores.ipynb
cultural-lexis-finetune-llms/: .gitignore  .rsync_exclude_files  README.md  pyproject.toml  pytorch_update_for_H100.sh  requirements.txt  rsync_exclude_files.txt  swow_zh_results_processed.pkl
cultural-lexis-finetune-llms/conf/: logging.yml
cultural-lexis-finetune-llms/conf/base/: parameters_finetuning_evaluation.yml  parameters_ppo_further_training.yml  parameters_ppo_mcq_data_generation.yml  parameters_ranking_problem_evaluation.yml
cultural-lexis-finetune-llms/docs/source/: conf.py  index.rst
cultural-lexis-finetune-llms/notebooks/: r1_test.ipynb
cultural-lexis-finetune-llms/notebooks/HLCP-11-PPO_Training/: test_fuzz.ipynb
cultural-lexis-finetune-llms/notebooks/HLCP-12-PPO_Ranking/: test_re_answer_parsing.ipynb  test_spearman_score.ipynb
cultural-lexis-finetune-llms/notebooks/HLCP-3_Decide_Prompt_Structure/: llm_alpaca_data_gen.ipynb  llm_alpaca_data_gen.ipynb.backup  read_swow.ipynb
cultural-lexis-finetune-llms/notebooks/HLCP-A-eval-12-models/: README.md  eval-12-models.ipynb  preprocess_llm_output_into_words.ipynb  temp.py
cultural-lexis-finetune-llms/notebooks/HLCP-X-better_PPO_training/: TestChat_vllm.ipynb  eval-1-internal-eval-on-generated-word-assoc.ipynb
cultural-lexis-finetune-llms/notebooks/Simon-0-Participant-Dataset-Gen/: README.md  alpaca_format.ipynb  read_swow_us.ipynb
cultural-lexis-finetune-llms/notebooks/Simon-1-Dataset-Generation/: README.md  eval_dataset.ipynb  gen_dataset_for_seed_cues.ipynb
cultural-lexis-finetune-llms/notebooks/Simon-2-Dataset-Generation-For-Multi-lang/: README.md  alpaca_format.ipynb  create_jupyter_tunnel.sh  preprocess_swow_zh.py  swow_gen_prompts.py
cultural-lexis-finetune-llms/notes/HLCP-11-PPO_Training/: README.md
cultural-lexis-finetune-llms/notes/HLCP-12-PPO_Training_for_Ranking/: README.md
cultural-lexis-finetune-llms/notes/HLCP-15-Evaluation_Method/: README.md
cultural-lexis-finetune-llms/notes/HLCP-2-Decide_Training_Data/: README.md
cultural-lexis-finetune-llms/notes/HLCP-20-Ranking_Problem_Evaluation/: README.md
cultural-lexis-finetune-llms/notes/HLCP-3_Decide_Prompt_Structure/: README.md
cultural-lexis-finetune-llms/notes/HLCP-8-SFT_Training/: README.md
cultural-lexis-finetune-llms/notes/HLCP-9-Understanding_Dataset/: README.md
cultural-lexis-finetune-llms/scripts/HLCP-11-PPO_Prepare/: s1_test_llama_swow_en_ppo_question.sh  s1_vanilla_models_ppo_question.sh  s2_sft_models_ppo_question.sh  s2_sft_models_ppo_question_qwen.sh
cultural-lexis-finetune-llms/scripts/HLCP-12-PPO_Training/: README.md  bulk_run.sh  convert_lora_to_full_model.sh  host_qwen3_vllm_ray.sh  host_self_raw_llm.sh  host_self_trained_vllm_ray.sh  reuse_configs.sh  run_cluster.sh  s10_ppo_qwen_swow_us_single.sh  s1_ppo_llama_swow_en_single.sh  s2_ppo_llama_swow_zh_single.sh  s3_ppo_qwen_swow_zh_single.sh  s4_ppo_qwen_swow_en_single.sh  s5_ppo_llama_swow_en_fted.sh  s6_ppo_llama_swow_zh_fted.sh  s7_ppo_qwen_swow_zh_fted.sh  s8_ppo_qwen_swow_en_fted.sh  s9_ppo_llama_swow_us_single.sh  setup_ray.sh  setup_ray_workers.sh  test_ppo_training_setup.sh  test_ppo_training_setup_with_lora.sh  test_vLLM_interaction.ipynb
cultural-lexis-finetune-llms/tests/: test_run.py
cultural-lexis-finetune-llms/utils/: get_data_from_server.sh  install_env_packages.sh  obtain_a_server.sh  set_envs.sh  sync_models_from_server.sh  sync_to_server.sh
docs/: conf.py  index.rst  llama_pipeline.md  quickstart.rst
language_modelling/: hf_token.txt  main.py
language_modelling/config/: hf_auth.py
language_modelling/preprocessing/: extract_questions.py
language_modelling/src/: evaluate.py  evaluate_across_models.ipynb  model_utils.py  prompt_utils.py  q_and_a.py  swow_utils.py
model_analysis/post/: affect_conc.py  cli.py  hypothesis.py  tension.py
sft_env/: main.py  pyproject.toml  use_sft_env.sh
tests/: chinese_cross_country.py  chinese_cross_country_drop.py  cross_country.py  cross_country_en.py  cross_country_en_drop.py  culturanbench.py  emotions_concretness.py  emotions_concretness_zh.py  hypothesis_tests_en.py  hypothesis_tests_zh.py  load_survey.py  plots.py  plots_zh.py  preprocess_model_outputs.py  score_and_export_associations.py  score_and_export_associations_zh.py  test_load_parquet.py  test_model_loading.py
wvs_eval/: main.py
wvs_eval/config/: hf_auth.py
wvs_eval/src/: config.py  evaluate.py  keyword_extraction.py  model_utils.py
(+97 files in other folders)
