[tool.poetry]
name = "cultural-lexis"
version = "0.1.0"
description = "Large Language Models adapting towards Cultures"
authors = ["Chunhua and Kabir"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"  # Instead of <4.0
transformers = "^4.44.0"
torch = "^2.4.0"
pandas = "^2.2.2"
accelerate = "^0.33.0"
polars = "^1.4.1"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
pytest = "^8.3.2"
datasets = "^3.0.1"
openpyxl = "^3.1.5"
pymupdf = "^1.25.0"
vllm = "^0.6.6.post1"
spacy = "3.8.4"
nltk = "^3.9.1"
rarfile = "^4.2"
statsmodels = "^0.14.5"
seaborn = "^0.13.2"
plotly = "^6.2.0"
peft = "^0.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
