[project]
name = "cultural-lexis"
version = "0.1.0"
description = "Large Language Models adapting towards Cultures"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Chunhua" },
  { name = "Kabir" }
]
dependencies = [
  "transformers>=4.44.0,<5.0.0",
  "torch>=2.4.0,<3.0.0",
  "pandas>=2.2.2,<3.0.0",
  "accelerate>=0.34,<1.1",
  "polars>=1.4.1,<2.0.0",
  "pyarrow>=17.0.0,<18.0.0",
  "fastparquet>=2024.5.0,<2025.0.0",
  "pytest>=8.3.2,<9.0.0",
  "datasets>=3.0.1,<4.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "pymupdf>=1.25.0,<2.0.0",
  "vllm>=0.6.6.post1,<0.7.0",
  "spacy==3.8.4",
  "nltk>=3.9.1,<4.0.0",
  "rarfile>=4.2,<5.0.0",
  "statsmodels>=0.14.5,<0.15.0",
  "seaborn>=0.13.2,<0.14.0",
  "plotly>=6.2.0,<7.0.0",
  "peft>=0.11.1,<0.13",
  "typer>=0.19.2,<0.20.0",
  "numpy>=1.24,<2.0",
  "onnx==1.17.0",
  "trl>=0.8.6,<0.10.0",
  "scikit-learn>=1.5.1,<1.6.0",
  "wandb>=0.22.1,<0.23.0",
  "jsonlines>=4.0.0,<5.0.0",
  "thefuzz>=0.22.1,<0.23.0",
  "gradio>=4,<5",
  "bitsandbytes>=0.39",
  "deepspeed>=0.10,<0.15",
]

[dependency-groups]
train = [
  "kedro[jupyter]==0.19.9",
  "kedro-datasets>=3.0",
  "kedro-viz>=6.7",
  "scikit-learn>=1.5.1,<1.6.0",
  "trl>=0.8.6,<0.9.7",
  "gradio>=4,<5",
  "wandb>=0.22.1,<0.23.0",
  "jsonlines>=4.0.0,<5.0.0",
  "thefuzz>=0.22.1,<0.23.0",
  "numpy<2.0.0",
  "onnx==1.17.0",
]

[project.scripts]
align = "wvs_eval.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "wvs_eval" },
  { include = "model_analysis" },
]